@@ -10,8 +10,9 @@
 class HighLine
   module SystemExtensions
     #
-    # This section builds a character reading function to suit the proper
-    # platform we're running on.  Be warned:  Here be dragons!
+    # This section builds character reading and terminal size functions
+    # to suit the proper platform we're running on.  Be warned:  Here be
+    # dragons!
     #
     begin
       require "Win32API"       # See if we're on Windows.
@@ -21,11 +22,31 @@ class HighLine
       #
       # Windows savvy getc().
       # 
-      # *WARNING*:  This method ignores <tt>@input</tt> and reads one
+      # *WARNING*:  This method ignores <tt>input</tt> and reads one
       # character from +STDIN+!
       # 
       def get_character( input = STDIN )
         Win32API.new("crtdll", "_getch", [ ], "L").Call
+      end
+
+      # A Windows savvy method to fetch the console columns, and rows.
+      def terminal_size
+        m_GetStdHandle               = Win32API.new( 'kernel32',
+                                                     'GetStdHandle',
+                                                     ['L'],
+                                                     'L' )
+        m_GetConsoleScreenBufferInfo = Win32API.new(
+          'kernel32', 'GetConsoleScreenBufferInfo', ['L', 'P'], 'L'
+        )
+
+        format        = 'SSSSSssssSS'
+        buf           = ([0] * format.size).pack(format)
+        stdout_handle = m_GetStdHandle.call(0xFFFFFFF5)
+        
+        m_GetConsoleScreenBufferInfo.call(stdout_handle, buf)
+        bufx, bufy, curx, cury, wattr,
+        left, top, right, bottom, maxx, maxy = buf.unpack(format)
+        return right - left + 1, bottom - top + 1
       end
     rescue LoadError             # If we're not on Windows try...
       begin
@@ -69,6 +90,11 @@ class HighLine
             system "stty #{state}"
           end
         end
+      end
+      
+      # A Unix savvy method to fetch the console columns, and rows.
+      def terminal_size
+       `stty size`.split.map { |x| x.to_i }.reverse
       end
     end
   end
